--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,11 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0",
-    "normalize.css": "^8.0.1"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0"
   },
   "devDependencies": {
     "husky": "^1.3.1",
