--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "copyfiles build ../public",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -16,6 +17,7 @@
     "react-scripts": "3.3.0"
   },
   "devDependencies": {
+    "copyfiles": "^2.1.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "node-sass": "^4.11.0",
