--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "postbuild": "copyfiles build ../public",
+    "postbuild": "copyfiles ./build/* ../public",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
